--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 </head>
 <body>
     <header>
-        <h1>Сергей</h1>
+        <nav>
+            <div class="logo"></div>
+            <ul class="nav-menu">
+                <li>меню1</li>
+                <li>меню1</li>
+                <li>меню1</li>
+            </ul>
+        </nav>
     </header>
+    <div class="info">
+        <h1>Привет, я Сергей</h1>
+        <h2>front-end разработчик</h2>
+    </div>
     <footer>
         Сайт визитка.
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
