--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <div class="info">
-        <h1>Привет, я Сергей</h1>
+        <h1>Привет, я Роман</h1>
         <h2>front-end разработчик</h2>
     </div>
     <footer>
